# hermes_rs

./: .gitignore  Cargo.toml  CreatingBinaries.md  README.md  hermes.hexpat
def_versions/: 90.def  94.def  96.def  _gen_macros.js
examples/: create.rs  jenkins.rs  patch_string.rs
helpers/: hermes.hexpat
src/: lib.rs  main.rs
src/hermes/: array_parser.rs  big_int_table.rs  bytecode_options.rs  cjs_module.rs  debug_info.rs  decode.rs  encode.rs  exception_handler.rs  function_header.rs  function_sources.rs  header.rs  jenkins.rs  mod.rs  regexp.rs  regexp_table.rs  small_function_header.rs  string_kind.rs  string_table.rs  types.rs
src/hermes/hermes_file/: builder.rs  mod.rs  reader.rs  writer.rs
src/hermes/v76/: mod.rs
src/hermes/v84/: mod.rs
src/hermes/v90/: mod.rs
src/hermes/v93/: mod.rs
src/hermes/v94/: mod.rs
src/hermes/v95/: mod.rs
src/hermes/v96/: mod.rs
