[package]
name = "hermes_rs"
description = "A dependency-free disassembler and assembler for the Hermes bytecode"
license = "MIT"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["v94"]
v89 = []
v90 = []
v93 = []
v94 = []
v95 = []

[dependencies]

[profile.release]
strip = true
