[package]
name = "hermes_rs"
description = "A dependency-free disassembler and assembler for the Hermes bytecode"
repository = "https://github.com/Pilfer/hermes_rs"
homepage = "https://github.com/Pilfer/hermes_rs"
license = "MIT"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
# default = ["v89","v90","v93","v94","v95", "v96"]
default = ["v94", "v95", "v96"]
v89 = []
v90 = []
v93 = []
v94 = []
v95 = []
v96 = []

[dependencies]
sha1 = "0.10.6"

[profile.release]
strip = true
